Fixed spacing

--- a/_sass/0-base/elements.scss
+++ b/_sass/0-base/elements.scss
@@ -10,6 +10,10 @@ body {
   font-size:1rem;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family:$font-family-alt;
+}
+
 p {
   letter-spacing: 0.01rem;
 }
