--- a/_sass/1-layout/page-sections.scss
+++ b/_sass/1-layout/page-sections.scss
@@ -2,7 +2,7 @@
 .section-row-bg {
 //  background-color: transparentize($base-color-primary-light, 0.9);
 }
-.section-row-alt-bg {
+.section-row-bg-alt {
   // background-color: transparentize($base-color-secondary-light, 0.6);
   background-color: $page-section-alt-color;
 }
